--- a/week 1/style.css
+++ b/week 1/style.css
@@ -7,13 +7,18 @@
     box-sizing: border-box;
 }
 
+:root{
+    --mark-size: 16px;  
+    --background-color: #fdfafa;
+}
+
 body{
     font-family: Montserrat, Helvetica, sans-serif;
-    font-size: 2.3vmin;
+    font-size: 16px;
+    background-color: var(--background-color);
 }
 
 header{
-    background-color: aliceblue;
     position: relative;
 }
 
@@ -80,7 +85,7 @@ button.toggle-button{
 
 
 .heading{
-    margin: 1rem 0;
+    margin: 2rem 0;
 }
 
 
